Add unified logging to Native Image